tests/parse_print/random_perturb/set01/change-08/stderr.expected
Conjure is exiting due to user errors.
Error:
    tests/parse_print/random_perturb/set01/change-08/change-08.essence line 3, column 26:
unexpected (
expecting (, bool, branching on, comma, end of input, find statement, function, given statement, int, letting statement, matrix, mset, objective, operator, partition, record, relation, rest of find statement, sequence, set, such that statement, tuple, variant, or where statement
    line 3, column 26
    find x : set (size 2) of inN(1..3)
                          ^^^^^^^